i added.. puhhh much things. number 1: first base of the weather widget. number 2: fixed tex box, so u can do shift+enter for new line. number3: added dir createing when savedData folder doesnt exist.

--- a/GoFlow/src/WidgetStyles/widget.css
+++ b/GoFlow/src/WidgetStyles/widget.css
@@ -12,6 +12,7 @@
 
 .widget{
     position: absolute;
+    transition: transform 0.2s ease
 }
 
 .titleText{
